--- a/EventManager.Client/Pages/CSM/CsomorListPage.razor
+++ b/EventManager.Client/Pages/CSM/CsomorListPage.razor
@@ -14,7 +14,7 @@
                         <div class="elements">
                             @foreach (var csomor in OwnedList)
                             {
-                                <CsomorListElementComponent Csomor="csomor" ShowOwner="false"></CsomorListElementComponent>
+                                <CsomorListElementComponent Csomor="csomor" ShowOwner="false" />
                             }
                         </div>
                     </div>
@@ -27,7 +27,7 @@
                         <div class="elements">
                             @foreach (var csomor in SharedList)
                             {
-                                <CsomorListElementComponent Csomor="csomor" ShowIsShared="false"></CsomorListElementComponent>
+                                <CsomorListElementComponent Csomor="csomor" ShowIsShared="false" />
                             }
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                         <div class="elements">
                             @foreach (var csomor in PublicList)
                             {
-                                <CsomorListElementComponent Csomor="csomor" ShowIsPublished="false"></CsomorListElementComponent>
+                                <CsomorListElementComponent Csomor="csomor" ShowIsPublished="false" />
                             }
                         </div>
                     </div>
