--- a/EventManager.Client/Pages/CSM/CsomorMakerSetting.razor
+++ b/EventManager.Client/Pages/CSM/CsomorMakerSetting.razor
@@ -25,53 +25,80 @@
         }
     </h1>
     <div class="action-bar">
-        <MudIconButton Icon="@Icons.Filled.Done" OnClick="SaveSettings" Disabled="!CanSave()" Color="Color.Primary"/>
-        <MudIconButton Icon="@Icons.Filled.MiscellaneousServices" OnClick="Generate" Disabled="!CanGenerate()" Color="Color.Primary"/>
+        <MudIconButton Icon="@Icons.Filled.Done" OnClick="SaveSettings" Disabled="!CanSave()" Color="Color.Primary" />
+        <MudIconButton Icon="@Icons.Filled.MiscellaneousServices" OnClick="Generate" Disabled="!CanGenerate()"
+            Color="Color.Primary" />
         @if (Settings != null)
         {
-            @if (Settings.IsPublic != null && (bool) Settings.IsPublic)
+            @if (Settings.IsPublic != null && (bool)Settings.IsPublic)
             {
-                <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => OpenConfirmDialog(false))" Disabled="Id == null || !CheckRole(CsomorRole.Owner, CsomorRole.Write)" Color="Color.Primary"/>
+                <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => OpenConfirmDialog(false))"
+            Disabled="Id == null || !CheckRole(CsomorRole.Owner, CsomorRole.Write)" Color="Color.Primary" />
             }
-            @if (Settings.IsPublic != null && !(bool) Settings.IsPublic)
+            @if (Settings.IsPublic != null && !(bool)Settings.IsPublic)
             {
-                <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => OpenConfirmDialog(true))" Disabled="Id == null || !CheckRole(CsomorRole.Owner, CsomorRole.Write)" Color="Color.Primary"/>
+                <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => OpenConfirmDialog(true))"
+            Disabled="Id == null || !CheckRole(CsomorRole.Owner, CsomorRole.Write)" Color="Color.Primary" />
             }
         }
-        <MudIconButton Icon="@Icons.Filled.ArrowCircleDown" OnClick="ExportXls" Disabled="!CanExport()" Color="Color.Primary"/>
-        <MudIconButton Icon="@Icons.Filled.ArrowCircleDown" OnClick="ExportPdf" Disabled="!CanExport()" Color="Color.Primary"/>
+        <MudIconButton Icon="@Icons.Filled.ArrowCircleDown" OnClick="ExportXls" Disabled="!CanExport()"
+            Color="Color.Primary" />
+        <MudIconButton Icon="@Icons.Filled.ArrowCircleDown" OnClick="ExportPdf" Disabled="!CanExport() || true"
+            Color="Color.Primary" />
         <span class="spacer"></span>
-        <MudIconButton Icon="@Icons.Filled.ArrowLeft" OnClick="@(() => NavigationManager.NavigateTo("/csomors"))" Color="Color.Primary"/>
+        <MudIconButton Icon="@Icons.Filled.ArrowLeft" OnClick="@(() => NavigationManager.NavigateTo("/csomors"))"
+            Color="Color.Primary" />
     </div>
-    <div class="csomor">
+    <div class="csomor blue-label">
         <MudTabs Class="tabs tab-group" Rounded="true" Color="Color.Primary" Centered="true">
             @if (CheckRole(CsomorRole.Owner, CsomorRole.Write, CsomorRole.Read))
             {
                 <MudTabPanel Text="Settings">
                     <EditForm EditContext="Context">
-                        <DataAnnotationsValidator/>
+                        <DataAnnotationsValidator />
                         <div class="input-row">
-                            <MudTextField @bind-Value="Model.Title" Label="Title" FullWidth="true" Variant="Variant.Outlined" Disabled="CheckRole(CsomorRole.Read)"/>
-                            <ValidationMessage For="() => Model.Title"/>
+                            <MudTextField @bind-Value="Model.Title" Label="Title" FullWidth="true"
+                            Variant="Variant.Outlined" Disabled="CheckRole(CsomorRole.Read)" />
+                            <ValidationMessage For="() => Model.Title" />
                         </div>
                         <div class="col col-12 row">
                             <div class="input-row col col-12 col-md-6">
-                                <MatDatePicker class="w-100" Value="@Model.Start" ValueExpression="@(() => Model.Start)" TValue="DateTime" ValueChanged="@(date => ReSetup(date, "start"))" EnableTime="true" Enable24hours="true" AllowInput="false" Label="Start" Dense="true" Outlined="true" Disabled="CheckRole(CsomorRole.Read)"></MatDatePicker>
-                                <ValidationMessage For="() => Model.Start"/>
+                                <MudDatePicker Date="@Model.Start" DateChanged="@(date => DateChanged(date, "start"))"
+                                Label="Start" Variant="Variant.Outlined" Disabled="CheckRole(CsomorRole.Read)"
+                                AdornmentColor="Color.Primary" DateFormat="yyyy. MM. dd." />
+                                <ValidationMessage For="() => Model.Start" />
                             </div>
                             <div class="input-row col col-12 col-md-6">
-                                <MatDatePicker class="w-100" Value="@Model.Finish" ValueExpression="@(() => Model.Finish)" TValue="DateTime" ValueChanged="@(date => ReSetup(date, "finish"))" EnableTime="true" Enable24hours="true" AllowInput="false" Label="Finish" Dense="true" Outlined="true" Disabled="CheckRole(CsomorRole.Read)"></MatDatePicker>
-                                <ValidationMessage For="() => Model.Finish"/>
+                                <MudDatePicker Date="@Model.Finish" DateChanged="@(date => DateChanged(date, "finish"))"
+                                Label="Finish" Variant="Variant.Outlined" Disabled="CheckRole(CsomorRole.Read)"
+                                AdornmentColor="Color.Primary" DateFormat="yyyy. MM. dd." />
+                                <ValidationMessage For="() => Model.Finish" />
                             </div>
                         </div>
                         <div class="col col-12 row">
                             <div class="input-row col col-12 col-md-6">
-                                <MatNumericUpDownField class="w-100" @bind-Value="Model.MaxWorkHour" Label="Maximum Work Hour" Dense="true" Minimum="1" Maximum="8" Outlined="true" Disabled="CheckRole(CsomorRole.Read)"></MatNumericUpDownField>
-                                <ValidationMessage For="() => Model.MaxWorkHour"/>
+                                <MudTimePicker Time="@Model.StartTime" TimeChanged="@(time => TimeChanged(time, "start"))"
+                                Label="Start Hour" Variant="Variant.Outlined" Disabled="CheckRole(CsomorRole.Read)"
+                                AdornmentColor="Color.Primary" TimeFormat="HH" />
+                                <ValidationMessage For="() => Model.StartTime" />
                             </div>
                             <div class="input-row col col-12 col-md-6">
-                                <MatNumericUpDownField class="w-100" @bind-Value="Model.MinRestHour" Label="Minimum Rest Hour" Dense="true" Minimum="1" Maximum="4" Outlined="true" Disabled="CheckRole(CsomorRole.Read)"></MatNumericUpDownField>
-                                <ValidationMessage For="() => Model.MinRestHour"/>
+                                <MudTimePicker Time="@Model.FinishTime" TimeChanged="@(time => TimeChanged(time, "finish"))"
+                                Label="Finish Hour" Variant="Variant.Outlined" Disabled="CheckRole(CsomorRole.Read)"
+                                AdornmentColor="Color.Primary" TimeFormat="HH" />
+                                <ValidationMessage For="() => Model.FinishTime" />
+                            </div>
+                        </div>
+                        <div class="col col-12 row">
+                            <div class="input-row col col-12 col-md-6">
+                                <MudNumericField FullWidth="true" @bind-Value="Model.MaxWorkHour" Label="Maximum Work Hour"
+                                Min="1" Max="8" Variant="Variant.Outlined" Disabled="CheckRole(CsomorRole.Read)" />
+                                <ValidationMessage For="() => Model.MaxWorkHour" />
+                            </div>
+                            <div class="input-row col col-12 col-md-6">
+                                <MudNumericField FullWidth="true" @bind-Value="Model.MinRestHour" Label="Minimum Rest Hour"
+                                Min="1" Max="4" Variant="Variant.Outlined" Disabled="CheckRole(CsomorRole.Read)" />
+                                <ValidationMessage For="() => Model.MinRestHour" />
                             </div>
                         </div>
                     </EditForm>
@@ -80,28 +107,31 @@
                     @if (CheckRole(CsomorRole.Owner, CsomorRole.Write))
                     {
                         <div class="group">
-                            <MatRadioGroup @bind-Value="PersonEvent">
-                                <MatRadioButton Value="EventManager.Client.Enums.AddType.Add">Add</MatRadioButton>
-                                <MatRadioButton Value="EventManager.Client.Enums.AddType.Import">Import</MatRadioButton>
-                            </MatRadioGroup>
+                            <MudRadioGroup @bind-SelectedOption="PersonEvent">
+                                <MudRadio Option="EventManager.Client.Enums.AddType.Add" Color="Color.Primary">Add</MudRadio>
+                                <MudRadio Option="EventManager.Client.Enums.AddType.Import" Color="Color.Secondary">Import</MudRadio>
+                            </MudRadioGroup>
                         </div>
                         @if (PersonEvent == EventManager.Client.Enums.AddType.Add)
                         {
                             <EditForm EditContext="PersonContext">
-                                <DataAnnotationsValidator/>
+                                <DataAnnotationsValidator />
                                 <div class="input-row">
-                                    <MatTextField class="w-100" @bind-Value="PersonModel.Name" Label="Name" Dense="true" Outlined="true"></MatTextField>
-                                    <ValidationMessage For="() => PersonModel.Name"/>
+                                    <MudTextField FullWidth="true" @bind-Value="PersonModel.Name" Label="Name" Variant="Variant.Outlined" />
+                                    <ValidationMessage For="() => PersonModel.Name" />
                                 </div>
                                 <div class="action">
                                     <span class="spacer"></span>
-                                    <MatButton Class="pr-3" Raised="true" @onclick="AddPerson">Add</MatButton>
+                                    <MudButton Class="pr-3" Variant="Variant.Filled" OnClick="AddPerson" Color="Color.Primary">Add</MudButton>
                                 </div>
                             </EditForm>
                         }
                         else if (PersonEvent == EventManager.Client.Enums.AddType.Import)
                         {
-                            <MatFileUpload AllowMultiple="false" Label="Import" OnChange="ImportPersons"></MatFileUpload>
+                            <div class="text-center">
+                                <InputFile id="fileInput" OnChange="ImportPersons" hidden></InputFile>
+                                <MudButton HtmlTag="label" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Filled.CloudUpload" for="fileInput">Import</MudButton>
+                            </div>
                         }
                     }
                     @if (Model.Persons.Count > 0)
@@ -109,7 +139,8 @@
                         <div class="list">
                             @foreach (var person in Model.Persons)
                             {
-                                <PersonComponent Person="person" Works="Model.Works" RoleChecker="CheckRole" StateChanged="StateChanged" IsEditable="true"></PersonComponent>
+                                <PersonComponent Person="person" Works="Model.Works" RoleChecker="CheckRole"
+                        StateChanged="StateChanged" IsEditable="true"></PersonComponent>
                             }
                         </div>
                     }
@@ -118,28 +149,31 @@
                     @if (CheckRole(CsomorRole.Owner, CsomorRole.Write))
                     {
                         <div class="group">
-                            <MatRadioGroup @bind-Value="WorkEvent">
-                                <MatRadioButton Value="EventManager.Client.Enums.AddType.Add">Add</MatRadioButton>
-                                <MatRadioButton Value="EventManager.Client.Enums.AddType.Import">Import</MatRadioButton>
-                            </MatRadioGroup>
+                            <MudRadioGroup @bind-SelectedOption="WorkEvent">
+                                <MudRadio Option="EventManager.Client.Enums.AddType.Add" Color="Color.Primary">Add</MudRadio>
+                                <MudRadio Option="EventManager.Client.Enums.AddType.Import" Color="Color.Secondary">Import</MudRadio>
+                            </MudRadioGroup>
                         </div>
                         @if (WorkEvent == EventManager.Client.Enums.AddType.Add)
                         {
                             <EditForm EditContext="WorkContext">
-                                <DataAnnotationsValidator/>
+                                <DataAnnotationsValidator />
                                 <div class="input-row">
-                                    <MatTextField class="w-100" @bind-Value="WorkModel.Name" Label="Name" Dense="true" Outlined="true"></MatTextField>
-                                    <ValidationMessage For="() => WorkModel.Name"/>
+                             <MudTextField FullWidth="true" @bind-Value="WorkModel.Name" Label="Name" Variant="Variant.Outlined" />
+                                    <ValidationMessage For="() => WorkModel.Name" />
                                 </div>
                                 <div class="action">
                                     <span class="spacer"></span>
-                                    <MatButton Raised="true" @onclick="AddWork">Add</MatButton>
+                                    <MudButton Class="pr-3" Variant="Variant.Filled" OnClick="AddWork" Color="Color.Primary">Add</MudButton>
                                 </div>
                             </EditForm>
                         }
                         else if (WorkEvent == EventManager.Client.Enums.AddType.Import)
                         {
-                            <MatFileUpload AllowMultiple="false" Label="Import" OnChange="ImportWorks"></MatFileUpload>
+                            <div class="text-center">
+                                <InputFile id="fileInput" OnChange="ImportWorks" hidden></InputFile>
+                                <MudButton HtmlTag="label" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Filled.CloudUpload" for="fileInput">Import</MudButton>
+                            </div>
                         }
                     }
                     @if (Model.Works.Count > 0)
@@ -147,7 +181,8 @@
                         <div class="list">
                             @foreach (var work in Model.Works)
                             {
-                                <WorkComponent Work="work" RoleChecker="CheckRole" StateChanged="StateChanged" IsEditable="true"></WorkComponent>
+                                <WorkComponent Work="work" RoleChecker="CheckRole" StateChanged="StateChanged" IsEditable="true">
+                                </WorkComponent>
                             }
                         </div>
                     }
@@ -156,7 +191,8 @@
             @if (Model.HasGeneratedCsomor)
             {
                 <MudTabPanel Text="Csomor">
-                    <CsomorComponent Settings="Settings" @bind-TableType="Type" @bind-FilterList="FilterList"></CsomorComponent>
+                    <CsomorComponent Settings="Settings" @bind-TableType="Type" @bind-FilterList="FilterList">
+                    </CsomorComponent>
                 </MudTabPanel>
             }
             @if (this.Id != null && CheckRole(CsomorRole.Owner))
