--- a/EventManager.Client/Shared/Common/Loader.razor
+++ b/EventManager.Client/Shared/Common/Loader.razor
@@ -1,3 +1,3 @@
 <div>
-    <MatProgressBar Indeterminate="true"></MatProgressBar>
+    <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
 </div>
