--- a/EventManager.Client/Shared/Components/CSM/CsomorShareComponent.razor
+++ b/EventManager.Client/Shared/Components/CSM/CsomorShareComponent.razor
@@ -16,7 +16,9 @@
                 <div class="data-row"><strong>Name: </strong> @person.UserName - @(string.IsNullOrEmpty(person.FullName) ? person.Email : person.FullName)</div>
                 <div class="data-row access" @onclick="@(() => ChangeAccess(person.Id))"><strong>Access Type: </strong>@(person.HasWriteAccess ? "Write" : "Read")</div>
                 <div class="data-row"><strong>Added On: </strong>@ManagerAPI.Shared.Helpers.DateHelper.DateToString(person.SharedOn)</div>
-                <MudIconButton Color="Color.Primary" Icon="@Icons.Filled.Remove" OnClick="@(() => RemovePerson(person.Id))" />
+                <div>
+                    <MudIconButton Color="Color.Primary" Icon="@Icons.Filled.Remove" OnClick="@(() => RemovePerson(person.Id))" />
+                </div>
             </div>
         }
     </div>
