--- a/EventManager.Client/Shared/Components/CSM/FullCsomorComponent.razor
+++ b/EventManager.Client/Shared/Components/CSM/FullCsomorComponent.razor
@@ -3,7 +3,7 @@
         @if (!SelectedIsPerson)
         {
             <MudSelect T="string?" Value="Selected" ValueChanged="SelectedWorkChanged" Variant="Variant.Outlined" Label="Work filter">
-                <MudSelectItem T="string" Value="null"></MudSelectItem>
+                <MudSelectItem T="string" Value="null">All</MudSelectItem>
                 @foreach (var work in Settings.Works)
                 {
                     <MudSelectItem T="string" Value="work.Id">@work.Name</MudSelectItem>
@@ -13,7 +13,7 @@
         else
         {
             <MudSelect T="string?" Value="Selected" ValueChanged="SelectedPersonChanged" Variant="Variant.Outlined" Label="Person filter">
-                <MudSelectItem T="string" Value="null"></MudSelectItem>
+                <MudSelectItem T="string" Value="null">All</MudSelectItem>
                 @foreach (var person in Settings.Persons)
                 {
                     <MudSelectItem T="string" Value="person.Id">@person.Name</MudSelectItem>
@@ -21,7 +21,7 @@
             </MudSelect>
         }
         <span class="spacer"></span>
-        <span>Is Personal table: <MudSwitch T="bool" Color="Color.Primary" Checked="SelectedIsPerson" CheckedChanged="TableStyleTypeChanged"></MudSwitch> </span>
+        <span><MudSwitch T="bool" Color="Color.Primary" Checked="SelectedIsPerson" Label="Is Personal table" CheckedChanged="TableStyleTypeChanged" /> </span>
     </div>
     <div class="table-row">
         <div class="element header interval">Full</div>
