--- a/EventManager.Client/_Imports.razor
+++ b/EventManager.Client/_Imports.razor
@@ -19,5 +19,4 @@
 @using EventManager.Client.Shared.Components.SL
 @using EventManager.Client.Shared.Components.CSM
 @using EventManager.Client.Models
-@using MatBlazor;
-@using MudBlazor;
+@using MudBlazor
