--- a/EventManager.Client/Pages/CSM/CsomorListPage.razor
+++ b/EventManager.Client/Pages/CSM/CsomorListPage.razor
@@ -8,7 +8,7 @@
     <div class="lists">
         @if (HasAnyCsomor())
         {
-            <MudTabs Class="tabs tab-group" Rounded="true" Color="Color.Primary" Centered="true">
+            <MudTabs Class="tabs tab-group flex-tab" Rounded="true" Color="Color.Primary" Centered="true">
                 @if (OwnedList != null && OwnedList.Count != 0)
                 {
                     <MudTabPanel Text="Owned">
