--- a/EventManager.Client/Shared/Components/CSM/PersonComponent.razor
+++ b/EventManager.Client/Shared/Components/CSM/PersonComponent.razor
@@ -3,7 +3,7 @@
 <div class="entity">
     <div class="data-row">
         <div class="row-header">
-            <strong>Name: </strong> &nbsp; @Person.Name
+            <strong>Name:</strong> @Person.Name
             <span class="spacer"></span>
             @if (IsOpened)
             {
@@ -19,8 +19,7 @@
     {
         <div class="data-row open-animation">
             <div class="row-header">
-
-                <strong>Settings:</strong> <br />
+                <strong>Settings:</strong>
                 <span class="spacer"></span>
                 @if (IsEditable && !IsEdit)
                 {
