--- a/EventManager.Client/wwwroot/css/site.scss
+++ b/EventManager.Client/wwwroot/css/site.scss
@@ -419,3 +419,10 @@ app {
 .small-icon {
   font-size: 1rem !important;
 }
+
+.flex-tab .mud-tabs-panels {
+  overflow: hidden;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
