--- a/EventManager.Client/Shared/Components/CSM/WorkComponent.razor
+++ b/EventManager.Client/Shared/Components/CSM/WorkComponent.razor
@@ -19,8 +19,7 @@
     {
         <div class="data-row open-animation">
             <div class="row-header">
-
-                <strong>Settings:</strong> <br />
+                <strong>Settings:</strong>
                 <span class="spacer"></span>
                 @if (IsEditable && !IsEdit)
                 {
