--- a/EventManager.Client/wwwroot/css/site.css
+++ b/EventManager.Client/wwwroot/css/site.css
@@ -358,4 +358,11 @@ app {
   font-size: 1rem !important;
 }
 
+.flex-tab .mud-tabs-panels {
+  overflow: hidden;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 /*# sourceMappingURL=site.css.map */
