--- a/EventManager.Client/Pages/CSM/CsomorMakerSetting.razor
+++ b/EventManager.Client/Pages/CSM/CsomorMakerSetting.razor
@@ -136,7 +136,7 @@
                     }
                     @if (Model.Persons.Count > 0)
                     {
-                        <div class="list">
+                        <div class="list mt-1">
                             @foreach (var person in Model.Persons)
                             {
                                 <PersonComponent Person="person" Works="Model.Works" RoleChecker="CheckRole"
@@ -178,7 +178,7 @@
                     }
                     @if (Model.Works.Count > 0)
                     {
-                        <div class="list">
+                        <div class="list mt-1">
                             @foreach (var work in Model.Works)
                             {
                                 <WorkComponent Work="work" RoleChecker="CheckRole" StateChanged="StateChanged" IsEditable="true">
